<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutFCP"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/today_green"
    android:orientation="horizontal"
    android:paddingTop="105dp"
    android:paddingRight="7dp"
    android:paddingLeft="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_collapseMode="pin">

    <RelativeLayout
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewProteinLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dip"
            android:gravity="bottom"
            android:maxLines="2"
            android:text="@string/protein"
            android:layout_marginBottom="8dp"
            style="@style/textMiddle"
            android:textColor="@color/protein"/>

        <TextView
            android:id="@+id/textViewProteinTotal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:gravity="bottom"
            android:layout_toRightOf="@+id/textViewProteinLabel"
            android:maxLines="1"
            android:text="0"
            android:layout_marginBottom="8dp"
            style="@style/textMiddle"
            android:textColor="@color/protein"/>

        <TextView
            android:id="@+id/textViewProteinPercent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="5dp"
            android:gravity="top"
            style="@style/textMiddle"
            android:textColor="@color/protein"
            android:maxLines="2"
            android:text="(0%)"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_prot_point"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFatLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dip"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            style="@style/textMiddle"
            android:text="@string/fat"
            android:textColor="@color/fat"
            />

        <TextView
            android:id="@+id/textViewFatTotal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:layout_toRightOf="@+id/textViewFatLabel"
            android:text="0"
            style="@style/textMiddle"
            android:textColor="@color/fat"
            />

        <TextView
            android:id="@+id/textViewFatPercent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:maxLines="2"
            android:text="(0%)"
            style="@style/textMiddle"
            android:textColor="@color/fat"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:src="@drawable/ic_fat_point"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCarbonLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dip"
            android:gravity="bottom"
            android:maxLines="2"
            android:text="@string/carbon"
            android:layout_marginBottom="8dp"
            style="@style/textMiddle"
            android:textColor="@color/carbon"
            />

        <TextView
            android:id="@+id/textViewCarbonTotal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/textViewCarbonLabel"
            android:gravity="bottom"
            android:maxLines="1"
            android:text="132.23"
            android:layout_marginBottom="8dp"
            style="@style/textMiddle"
            android:textColor="@color/carbon"
            />

        <TextView
            android:id="@+id/textViewCarbonPercent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:maxLines="2"
            android:text="(0%)"
            style="@style/textMiddle"
            android:textColor="@color/carbon"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:src="@drawable/ic_carb_point"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="fill_parent"
        android:layout_weight="0.8"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chartMini"
            android:layout_width="45dp"
            android:layout_height="45dp" />

    </LinearLayout>

</LinearLayout>